# codif-ape-graph-rag

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.sh  supervisord.conf  test.py
.github/workflows/: build-image.yaml  build-images.yaml
Dockerfiles/: Dockerfile-api  Dockerfile-streamlit
app/: main.py
deployment/: deployment.yaml  ingress.yaml  service-api.yaml  service-webapp.yaml  service.yaml
deployment/argocd-templates/: web-app-graph-rag.yaml
src/: build-graph-db.py  build_graph_db.py  classify.py  evaluate.py  main.py  test.py.py  xxx.ipynb
src/api/: main.py
src/api/routes/: common.py  flat_embeddings.py  flat_rag.py  hierarchical_embeddings.py  hierarchical_rag.py
src/classify/: base.py  flat_embeddings.py  flat_rag.py  hierarchical_embeddings.py  hierarchical_rag.py
src/constants/: __init__.py  api_url.py  graph_db.py  llm.py  paths.py  prompts.py
src/evaluation/: args_parser.py  data.py
src/llm/: client.py  prompting.py  responses.py  schema.py
src/streamlit/: main.py
src/utils/: cypher.py  data.py  logging.py
src/vector_db/: loaders.py  utils.py
