[project]
name = "codif-ape-graph-rag"
version = "0.1.0"
description = "To add"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyarrow>=19.0.1",
    "langchain-community>=0.3.20",
    "openai>=1.69.0",
    "pre-commit>=4.2.0",
]
authors = [
  {name="Thomas Faria", email="thomas.faria@insee.fr"}
]

[tool.ruff]
line-length = 130
