[project]
name = "codif-ape-graph-rag"
version = "0.1.0"
description = "To add"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyarrow>=19.0.1",
    "langchain-community>=0.3.20",
    "openai>=1.69.0",
    "pre-commit>=4.2.0",
    "langchain-neo4j>=0.4.0",
    "pandas>=2.2.3",
    "s3fs>=2024.12.0",
    "uvicorn>=0.34.0",
    "fastapi>=0.115.12",
    "streamlit>=1.44.0",
    "langchain-openai>=0.3.11",
]
authors = [
  {name="Thomas Faria", email="thomas.faria@insee.fr"}
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pre-commit>=4.2.0",
]

[tool.ruff]
line-length = 130

[tool.uv]
default-groups = ["dev"]
