[project]
name = "codif-ape-graph-rag"
version = "0.1.0"
description = "To add"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyarrow>=19.0.1",
    "langchain-community>=0.3.20",
    "openai>=1.69.0",
    "langchain-neo4j>=0.4.0",
    "pandas>=2.2.3",
    "s3fs>=2024.12.0",
    "uvicorn>=0.34.0",
    "fastapi>=0.115.12",
    "streamlit>=1.44.0",
    "langchain-openai>=0.3.11",
    "transformers>=4.51.3",
    "humanize>=4.12.2",
    "langfuse>=3.0.5",
    "python-dotenv>=1.1.0",
]
authors = [
  {name="Thomas Faria", email="thomas.faria@insee.fr"}
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pre-commit>=4.2.0",
    "mlflow>=2.21.3",
    "pip>=25.0.1",
    "ipykernel>=6.29.5",
]

[tool.setuptools]
packages = ["src", "app"]

[tool.ruff]
line-length = 130

[tool.uv]
default-groups = ["dev"]
